force-app/main/default/objects/SaoObj900__c/SaoObj900__c.object-meta.xml
<CustomObject>
    <description>11</description>
    <label>SaiObj900</label>
    <nameField>
        <label>SaiObj900 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SaiObj900s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>