force-app/main/default/objects/SaoObj900__c/fields/f1__c.field-meta.xml
<CustomField>
    <fullName>f1__c</fullName>
    <description>1111</description>
    <label>f1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>