force-app/main/default/objects/SaoObj900__c/fields/F2__c.field-meta.xml
<CustomField>
    <fullName>F2__c</fullName>
    <description>1111111111</description>
    <label>F2</label>
    <type>Phone</type>
</CustomField>