force-app/main/default/objects/SaoObj900__c/fields/f4__c.field-meta.xml
<CustomField>
    <fullName>f4__c</fullName>
    <description>111</description>
    <label>f4</label>
    <length>80</length>
    <type>Text</type>
</CustomField>